# GrFramework

./: CMakeLists.txt  WindowManager  manager.h  simplewindow.cpp  simplewindow.h
src/: button.cpp  button.h  button.hpp  elemmanager.cpp  elemmanager.hpp  elemwidget.cpp  elemwidget.hpp  elemwindow.cpp  elemwindow.hpp  event.cpp  event.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  manager.cpp  scrollbar.cpp  scrollbar.hpp  slider.cpp  slider.hpp  texture.cpp  texture.hpp  windowmanager.cpp  windowmanager.h  windowmanager.hpp
src/Renderer/: shaderprogram.cpp  shaderprogram.hpp  textureva.cpp  textureva.hpp  vertexarray.cpp  vertexarray.hpp
src/Renderer/Shaders/: texture_ex.fs  texture_ex.vs
